<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context="com.example.sofie.mymathapplication.GameActivity">

    <TextView
        android:id="@+id/countdown_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="@dimen/menu_button_margin"
        android:textSize="50sp"
        android:textColor="@color/white"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        tools:context="com.example.sofie.mymathapplication.GameActivity">

        <TextView
            android:id="@+id/guess_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/menu_button_margin"
            android:layout_marginBottom="25dp"
            android:textSize="20sp"
            android:text="@string/guess_label"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/algorithm_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:padding="@dimen/menu_button_padding"
            android:background="@drawable/menubtnbackground"/>

    </LinearLayout>

    <TextView
        android:id="@+id/right_or_wrong_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:padding="@dimen/menu_button_padding" />

    <GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        tools:context="com.example.sofie.mymathapplication.GameActivity">

        <Button
            android:id="@+id/btnOne"
            style="@style/KeyboardButton"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/one_label"/>

        <Button
            android:id="@+id/btnTwo"
            style="@style/KeyboardButton"
            android:layout_column="1"
            android:layout_row="0"
            android:text="@string/two_label"/>

        <Button
            android:id="@+id/btnThree"
            style="@style/KeyboardButton"
            android:layout_column="2"
            android:layout_row="0"
            android:text="@string/three_label"/>

        <Button
            android:id="@+id/btnFour"
            style="@style/KeyboardButton"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/four_label"/>

        <Button
            android:id="@+id/btnFive"
            style="@style/KeyboardButton"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/five_label"/>

        <Button
            android:id="@+id/btnSix"
            style="@style/KeyboardButton"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/six_label"/>

        <Button
            android:id="@+id/btnSeven"
            style="@style/KeyboardButton"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/seven_label"/>

        <Button
            android:id="@+id/btnEight"
            style="@style/KeyboardButton"
            android:layout_column="1"
            android:layout_row="2"
            android:text="@string/eight_label"/>

        <Button
            android:id="@+id/btnNine"
            style="@style/KeyboardButton"
            android:layout_column="2"
            android:layout_row="2"
            android:text="@string/nine_label"/>

        <Button
            android:id="@+id/btnDelete"
            style="@style/KeyboardButton"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/delete_label"/>

        <Button
            android:id="@+id/btnZero"
            style="@style/KeyboardButton"
            android:layout_column="1"
            android:layout_row="3"
            android:text="@string/zero_label"/>

        <Button
            android:id="@+id/btnHashtag"
            style="@style/KeyboardButton"
            android:layout_column="2"
            android:layout_row="3"
            android:text="@string/hashtag_label"/>

        <Button
            android:id="@+id/btnMinus"
            style="@style/KeyboardButton"
            android:layout_column="3"
            android:layout_row="3"
            android:text="@string/minus_label"/>

    </GridLayout>
</LinearLayout>