<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="@style/menuContainer"
    tools:context="com.example.sofie.mymathapplication.MainActivity">

    <TextView
        style="@style/headLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_box_title"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/elevation_high"
        android:orientation="horizontal"
        android:padding="@dimen/menu_padding"
        android:layout_gravity="center"
        tools:context="com.example.sofie.mymathapplication.MainActivity">

        <Button
            android:id="@+id/save_button"
            style="@style/ExitButton"
            android:gravity="center"
            android:text="@string/yes_label"/>

        <Button
            android:id="@+id/exit_button"
            style="@style/ExitButton"
            android:gravity="center"
            android:text="@string/no_label"/>

    </LinearLayout>
</LinearLayout>